FIX: random bold on mobile

--- a/files/main_style.css
+++ b/files/main_style.css
@@ -583,6 +583,7 @@ h1, h2, h3, h4, h5, h6 { font-weight: normal !important; -webkit-font-smoothing:
   .our-network-logos img { max-width: 100px; height: auto; margin: 0.5em; display: inline-block; }
   .our-network-logos { text-align: center; }
   h1, h2, h3, h4, h5, h6 { font-weight: normal !important; }
+  strong, b { font-weight: normal !important; }
   
   /* Reduce excessive spacing on mobile */
   .wsite-spacer[style*="height:50px"] { height: 20px !important; }
